src/passes/snapshots/lumina2__passes__cst_gen__test__expression__expression_tuple_single_value.snap
---
source: src/passes/cst_gen.rs
expression: "(1,)"
---
Tuple(
    Tuple {
        tok_l_parenthesis: LParenthesis,
        values: PunctuatedList {
            items: [
                Literal(
                    Integer(
                        IntegerLiteral(
                            IntegerLiteral(
                                1,
                            ),
                        ),
                    ),
                ),
            ],
            punctuation: [
                Comma,
            ],
        },
        tok_r_parenthesis: RParenthesis,
    },
)
