src/passes/snapshots/lumina2__passes__cst_gen__test__expression__expression_tuple_with_binary.snap
---
source: src/passes/cst_gen.rs
expression: thing.a + thing.b
---
Binary(
    Binary {
        lhs: Field(
            Field {
                lhs: Variable(
                    Variable {
                        variable: Ident(
                            "thing",
                        ),
                    },
                ),
                tok_dot: Dot,
                field: Named(
                    Ident(
                        "a",
                    ),
                ),
            },
        ),
        operation: Plus(
            Plus,
        ),
        rhs: Field(
            Field {
                lhs: Variable(
                    Variable {
                        variable: Ident(
                            "thing",
                        ),
                    },
                ),
                tok_dot: Dot,
                field: Named(
                    Ident(
                        "b",
                    ),
                ),
            },
        ),
    },
)
