src/passes/snapshots/lumina2__passes__cst_gen__test__expression__expression_unary_operation.snap
---
source: src/passes/cst_gen.rs
expression: "-123"
---
Unary(
    Unary {
        operation: Negative(
            Minus,
        ),
        value: Literal(
            Integer(
                IntegerLiteral(
                    IntegerLiteral(
                        123,
                    ),
                ),
            ),
        ),
    },
)
