src/passes/snapshots/lumina2__passes__cst_gen__test__expression__expression_unary_operation_add_mul.snap
---
source: src/passes/cst_gen.rs
expression: 123 + -321 * 999
---
Binary(
    Binary {
        lhs: Literal(
            Integer(
                IntegerLiteral(
                    IntegerLiteral(
                        123,
                    ),
                ),
            ),
        ),
        operation: Plus(
            Plus,
        ),
        rhs: Binary(
            Binary {
                lhs: Unary(
                    Unary {
                        operation: Negative(
                            Minus,
                        ),
                        value: Literal(
                            Integer(
                                IntegerLiteral(
                                    IntegerLiteral(
                                        321,
                                    ),
                                ),
                            ),
                        ),
                    },
                ),
                operation: Multiply(
                    Asterisk,
                ),
                rhs: Literal(
                    Integer(
                        IntegerLiteral(
                            IntegerLiteral(
                                999,
                            ),
                        ),
                    ),
                ),
            },
        ),
    },
)
