src/passes/snapshots/lumina2__passes__cst_gen__test__expression__expression_unnamed_field.snap
---
source: src/passes/cst_gen.rs
expression: thing.2
---
Field(
    Field {
        lhs: Variable(
            Variable {
                variable: Ident(
                    "thing",
                ),
            },
        ),
        tok_dot: Dot,
        field: Unnamed(
            IntegerLiteral(
                2,
            ),
        ),
    },
)
